[gradle] cleaning up structure for Airlearner